# Coffee-Shop

./: .gitignore  CMakeLists.txt  TODO  coffee.h  coffee_account.h  coffee_birth.h  coffee_guest.cpp  coffee_guest.h  coffee_manager.cpp  coffee_manager.h  coffee_product.cpp  coffee_product.h  coffee_system.cpp  coffee_system.h  coffee_type.h
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt  gb.cpp  gb.h  print_all.cpp  ut.h
tests/guest/: CMakeLists.txt  new_account_guest.cpp  print_all.cpp  sign_in_guest.cpp
tests/manager/: CMakeLists.txt  add_drink.cpp  add_food.cpp  new_account_manager.cpp  sign_in_manager.cpp
tests/system_ut/: CMakeLists.txt  system_sign_in.cpp  system_sign_in_manager.cpp
